tests/baselines/reference/staticsInConstructorBodies.errors.txt
tests/cases/compiler/staticsInConstructorBodies.ts(3,3): error TS1128: Declaration or statement expected.
tests/cases/compiler/staticsInConstructorBodies.ts(6,1): error TS1128: Declaration or statement expected.


==== tests/cases/compiler/staticsInConstructorBodies.ts (2 errors) ====
    class C {
    	constructor() {
    		static p1 = 0; // ERROR
    		~~~~~~
!!! error TS1128: Declaration or statement expected.
    		static m1() {} // ERROR
    	}
    }
    ~
!!! error TS1128: Declaration or statement expected.